--- a/index.html
+++ b/index.html
@@ -1,37 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies Page</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Movies Page</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <style>
+
+    .nav-link {
+      color: white !important;
+    }
+
+    .nav-link.active {
+      color: red !important;
+    }
+
+    .nav-link:hover {
+      color: orange !important;
+    }
+
+    .navbar-toggler-icon {
+      background-color: #ff6347;
+    }
+
+    .carousel-item img {
+      height: 800px;
+      object-fit: cover;
+    }
+
+    .carousel-item p {
+      color: yellow;
+      font-weight: 700;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.75);
+    }
+
+    .card-body {
+      height: 200px;
+      /* Sabit yükseklik */
+      overflow: hidden;
+      /* Aşan metni gizler */
+    }
+
+    .card-body p {
+      display: -webkit-box;
+      -webkit-line-clamp: 3;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    @media (max-width: 768px) {
+      .carousel-item img {
+        height: 600px;
+      }
+    }
+  </style>
 </head>
+
 <body>
-    <nav class="navbar bg-dark navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
+  <nav class="navbar navbar-expand-lg bg-dark py-3">
+    <div class="container-fluid">
+      <a class="navbar-brand text-white" href="#">Movies</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Coming Soon</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Popular</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
+    <!-- Carousel Indicators -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+
+    <!-- Carousel Inner -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/Images/HP_PhilosopherStoneBanner.jpg" class="d-block w-100 img-fluid" alt="..." id="image1">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Harry Potter and Philosopher's Stone</h5>
+          <p>Harry Potter begins his journey into the wizarding world, uncovering the secrets of a mysterious stone.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/HP_ChamberOfSecrets.jpg" class="d-block w-100 img-fluid" alt="..." id="image2">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Harry Potter Chamber of Secrets</h5>
+          <p>Harry returns to Hogwarts for his second year to uncover the mystery behind a deadly force unleashed in the
+            school.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/Images/HP_GobletOfFire.png" class="d-block w-100 img-fluid" alt="..." id="image3">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Harry Potter Goblet of Fire</h5>
+          <p>Harry is unexpectedly entered into the Triwizard Tournament, where he must survive dangerous challenges and
+            uncover a dark conspiracy.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Carousel Controls -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <div class="container mt-5">
+    <div class="row g-8">
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="/Images/ss_3.jpeg" class="card-img-top" alt="Film 1" style="height: 400px; object-fit: cover;">
+          <div class="card-body">
+            <h5 class="card-title">Harry Potter and The Chamber of Secrets</h5>
+            <p class="card-text">Harry returns to Hogwarts for his second year, only to face mysterious attacks that
+              leave students petrified. Legends of a hidden Chamber of Secrets resurface, and Harry uncovers its
+              connection to a dangerous monster. With the help of Ron and Hermione, he discovers the truth, defeats the
+              monstrous Basilisk, and saves Ginny Weasley, who had been controlled by a cursed diary.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
           </div>
         </div>
-      </nav>
+      </div>
 
-      <script src="js/bootstrap.bundle.min.js"></script>
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="/Images/ss_3.jpeg" class="card-img-top" alt="Film 1" style="height: 400px; object-fit: cover;">
+          <div class="card-body">
+            <h5 class="card-title">Harry Potter and The Chamber of Secrets</h5>
+            <p class="card-text">Harry returns to Hogwarts for his second year, only to face mysterious attacks that
+              leave students petrified. Legends of a hidden Chamber of Secrets resurface, and Harry uncovers its
+              connection to a dangerous monster. With the help of Ron and Hermione, he discovers the truth, defeats the
+              monstrous Basilisk, and saves Ginny Weasley, who had been controlled by a cursed diary.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="/Images/ss_3.jpeg" class="card-img-top" alt="Film 1" style="height: 400px; object-fit: cover;">
+          <div class="card-body">
+            <h5 class="card-title">Harry Potter and The Chamber of Secrets</h5>
+            <p class="card-text">Harry returns to Hogwarts for his second year, only to face mysterious attacks that
+              leave students petrified. Legends of a hidden Chamber of Secrets resurface, and Harry uncovers its
+              connection to a dangerous monster. With the help of Ron and Hermione, he discovers the truth, defeats the
+              monstrous Basilisk, and saves Ginny Weasley, who had been controlled by a cursed diary.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row g-8">
+
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="/Images/ss_3.jpeg" class="card-img-top" alt="Film 1" style="height: 400px; object-fit: cover;">
+          <div class="card-body">
+            <h5 class="card-title">Harry Potter and The Chamber of Secrets</h5>
+            <p class="card-text">Harry returns to Hogwarts for his second year, only to face mysterious attacks that
+              leave students petrified. Legends of a hidden Chamber of Secrets resurface, and Harry uncovers its
+              connection to a dangerous monster. With the help of Ron and Hermione, he discovers the truth, defeats
+              the
+              monstrous Basilisk, and saves Ginny Weasley, who had been controlled by a cursed diary.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="/Images/ss_3.jpeg" class="card-img-top" alt="Film 1" style="height: 400px; object-fit: cover;">
+          <div class="card-body">
+            <h5 class="card-title">Harry Potter and The Chamber of Secrets</h5>
+            <p class="card-text">Harry returns to Hogwarts for his second year, only to face mysterious attacks that
+              leave students petrified. Legends of a hidden Chamber of Secrets resurface, and Harry uncovers its
+              connection to a dangerous monster. With the help of Ron and Hermione, he discovers the truth, defeats the
+              monstrous Basilisk, and saves Ginny Weasley, who had been controlled by a cursed diary.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mb-3">
+          <img src="/Images/ss_3.jpeg" class="card-img-top" alt="Film 1" style="height: 400px; object-fit: cover;">
+          <div class="card-body">
+            <h5 class="card-title">Harry Potter and The Chamber of Secrets</h5>
+            <p class="card-text">Harry returns to Hogwarts for his second year, only to face mysterious attacks that
+              leave students petrified. Legends of a hidden Chamber of Secrets resurface, and Harry uncovers its
+              connection to a dangerous monster. With the help of Ron and Hermione, he discovers the truth, defeats the
+              monstrous Basilisk, and saves Ginny Weasley, who had been controlled by a cursed diary.</p>
+            <p class="card-text"><small class="text-body-secondary">Last updated 5 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+
+
+  <script src="js/bootstrap.bundle.min.js"></script>
+  <script>
+    function updateCarouselImages() {
+      const imgElement1 = document.getElementById('image1');
+      const imgElement2 = document.getElementById('image2');
+      const imgElement3 = document.getElementById('image3');
+
+      const isMobile = window.innerWidth <= 768;
+
+      imgElement1.src = isMobile ? '/Images/Mobil_HP_PhilosopherStoneBanner.jpg' : '/Images/HP_PhilosopherStoneBanner.jpg';
+      imgElement2.src = isMobile ? '/Images/Mobile_HP_ChamberOfSecrets.jpg' : '/Images/HP_ChamberOfSecrets.jpg';
+      imgElement3.src = isMobile ? '/Images/Mobil_HP_GobletOfFire.png' : '/Images/HP_GobletOfFire.png';
+    }
+
+    // Resize event listener
+    window.addEventListener('resize', updateCarouselImages);
+
+    // İlk yükleme için çağırma
+    updateCarouselImages();
+  </script>
 </body>
+
 </html>
