--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
     .banner .carousel-inner {
       padding: 0.5em 0em;
     }
-
-    .popularSection {
+    .popularSectionTitle{
       padding-left: 2em;
     }
+    /* .popularSection {
+      padding-left: 2em;
+    } */
 
     .inVisionHeaderDiv {
       padding-left: 2em;
@@ -230,9 +232,9 @@
   </div>
 
   <div class="popularSection">
-    <p>
-    <h2 class="popularSectionTitle">Popular</h2>
-    </p>
+    <div class="popularSectionTitle">
+      <h2>Popular</h2>
+    </div>
     <div class="container mt-1">
       <div class="row g-8">
         <div class="col-md-4">
@@ -501,7 +503,18 @@
   </div>
 
 
-
+  <div class="footer bg-dark">
+    <footer class="py-3 mt-4">
+      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+        <li class="nav-item "><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+      </ul>
+      <p class="text-center text-white">© 2021 Company, Inc</p>
+    </footer>
+  </div>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script>
     function updateCarouselImages() {
