--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 </head>
 
 <body>
+
   <nav class="navbar navbar-expand-lg bg-dark py-3 sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand text-white" href="#">Movies</a>
@@ -174,10 +175,14 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Popular</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
+
   <div class="banner">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
       <div class="carousel-indicators">
@@ -502,6 +507,45 @@
     </div>
   </div>
 
+  <div class="container mt-5">
+    <h2 class="text-center mb-4">Contact Us</h2>
+    <form>
+      <!-- Name -->
+      <div class="mb-3">
+        <label for="name" class="form-label">Name</label>
+        <input type="text" class="form-control" id="name" placeholder="Enter your name">
+      </div>
+      <!-- Email -->
+      <div class="mb-3">
+        <label for="email" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="email" placeholder="Enter your email">
+      </div>
+      <!-- Subject -->
+      <div class="mb-3">
+        <label for="subject" class="form-label">Subject</label>
+        <select class="form-select" id="subject">
+          <option selected>Choose a subject</option>
+          <option value="1">General Inquiry</option>
+          <option value="2">Support</option>
+          <option value="3">Feedback</option>
+        </select>
+      </div>
+      <!-- Message -->
+      <div class="mb-3">
+        <label for="message" class="form-label">Message</label>
+        <textarea class="form-control" id="message" rows="4" placeholder="Write your message"></textarea>
+      </div>
+      <!-- Checkbox -->
+      <div class="form-check mb-3">
+        <input class="form-check-input" type="checkbox" id="agreement">
+        <label class="form-check-label" for="agreement">
+          I agree to the terms and conditions
+        </label>
+      </div>
+      <!-- Submit Button -->
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
 
   <div class="footer bg-dark">
     <footer class="py-3 mt-4">
@@ -515,6 +559,7 @@
       <p class="text-center text-white">© 2021 Company, Inc</p>
     </footer>
   </div>
+
   <script src="js/bootstrap.bundle.min.js"></script>
   <script>
     function updateCarouselImages() {
