--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/Images/HP_PhilosopherStoneBanner.jpg" class="d-block w-100 img-fluid" alt="..." id="image1">
+          <img src="./Images/HP_PhilosopherStoneBanner.jpg" class="d-block w-100 img-fluid" alt="..." id="image1">
           <div class="carousel-caption d-none d-md-block">
             <h5>Harry Potter and Philosopher's Stone</h5>
             <p>Harry Potter begins his journey into the wizarding world, uncovering the secrets of a mysterious stone.
@@ -205,7 +205,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/Images/HP_ChamberOfSecrets.jpg" class="d-block w-100 img-fluid" alt="..." id="image2">
+          <img src="./Images/HP_ChamberOfSecrets.jpg" class="d-block w-100 img-fluid" alt="..." id="image2">
           <div class="carousel-caption d-none d-md-block">
             <h5>Harry Potter Chamber of Secrets</h5>
             <p>Harry returns to Hogwarts for his second year to uncover the mystery behind a deadly force unleashed in
@@ -214,7 +214,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/Images/HP_GobletOfFire.png" class="d-block w-100 img-fluid" alt="..." id="image3">
+          <img src="./Images/HP_GobletOfFire.png" class="d-block w-100 img-fluid" alt="..." id="image3">
           <div class="carousel-caption d-none d-md-block">
             <h5>Harry Potter Goblet of Fire</h5>
             <p>Harry is unexpectedly entered into the Triwizard Tournament, where he must survive dangerous challenges
@@ -246,7 +246,7 @@
       <div class="row g-8">
         <div class="col-md-4">
           <div class="card mb-3">
-            <img src="/Images/HP_ChamberOfSecrets_P.jpeg" class="card-img-top" alt="Film 1"
+            <img src="./Images/HP_ChamberOfSecrets_P.jpeg" class="card-img-top" alt="Film 1"
               style="height: 400px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">Harry Potter and The Chamber of Secrets</h5>
@@ -262,7 +262,7 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <img src="/Images/HP_GobletOfTheFire_P.jpg" class="card-img-top" alt="Film 1"
+            <img src="./Images/HP_GobletOfTheFire_P.jpg" class="card-img-top" alt="Film 1"
               style="height: 400px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">Harry Potter and The Goblet of the Fire</h5>
@@ -279,7 +279,7 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <img src="/Images/HP_PhilosophersStone_P.jpg" class="card-img-top" alt="Film 1"
+            <img src="./Images/HP_PhilosophersStone_P.jpg" class="card-img-top" alt="Film 1"
               style="height: 400px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">Harry Potter and the Philosopher's Stone</h5>
@@ -298,7 +298,7 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <img src="/Images/HP_PrisonersOfAzkaban_P.png" class="card-img-top" alt="Film 1"
+            <img src="./Images/HP_PrisonersOfAzkaban_P.png" class="card-img-top" alt="Film 1"
               style="height: 400px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">Harry Potter and Prisoner of Azkaban</h5>
@@ -315,7 +315,7 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <img src="/Images/HP_ OrderoOfthePhoenix_P.jpg" class="card-img-top" alt="Film 1"
+            <img src="./Images/HP_ OrderoOfthePhoenix_P.jpg" class="card-img-top" alt="Film 1"
               style="height: 400px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">Harry Potter and the Order of the Phoenix</h5>
@@ -335,7 +335,7 @@
 
         <div class="col-md-4">
           <div class="card mb-3">
-            <img src="/Images/HP_HalfBloodPrince_P.jpg" class="card-img-top" alt="Film 1"
+            <img src="./Images/HP_HalfBloodPrince_P.jpg" class="card-img-top" alt="Film 1"
               style="height: 400px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">Harry Potter and the Half-Blood Prince</h5>
@@ -373,7 +373,7 @@
         <div class="carousel-item active">
           <div class="cards-wrapper">
             <div class="isVisionCard">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -381,7 +381,7 @@
               </div>
             </div>
             <div class="isVisionCard d-none d-md-block">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -389,7 +389,7 @@
               </div>
             </div>
             <div class="isVisionCard d-none d-md-block">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -397,7 +397,7 @@
               </div>
             </div>
             <div class="isVisionCard d-none d-md-block">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -405,7 +405,7 @@
               </div>
             </div>
             <div class="isVisionCard d-none d-md-block">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -417,7 +417,7 @@
         <div class="carousel-item">
           <div class="cards-wrapper">
             <div class="isVisionCard">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -425,7 +425,7 @@
               </div>
             </div>
             <div class="isVisionCard d-none d-md-block">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -433,7 +433,7 @@
               </div>
             </div>
             <div class="isVisionCard d-none d-md-block">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -441,7 +441,7 @@
               </div>
             </div>
             <div class="isVisionCard d-none d-md-block">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -449,7 +449,7 @@
               </div>
             </div>
             <div class="isVisionCard d-none d-md-block">
-              <img src="/Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
+              <img src="./Images/HP_DeathlyHallows.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Harry Potter Deathly Hallows Part 1</h5>
                 <p class="card-text">In Harry Potter and the Deathly Hallows: Part 1, Harry, Ron, and Hermione set out to destroy Voldemort's Horcruxes, facing constant danger and the strain of their friendship. As Voldemort's power grows, they uncover the legend of the Deathly Hallows, which could alter the war's outcome, and prepare for the final battle against the Dark Lord.</p>
@@ -532,9 +532,9 @@
 
       const isMobile = window.innerWidth <= 768;
 
-      imgElement1.src = isMobile ? '/Images/Mobil_HP_PhilosopherStoneBanner.jpg' : '/Images/HP_PhilosopherStoneBanner.jpg';
-      imgElement2.src = isMobile ? '/Images/Mobile_HP_ChamberOfSecrets.jpg' : '/Images/HP_ChamberOfSecrets.jpg';
-      imgElement3.src = isMobile ? '/Images/Mobil_HP_GobletOfFire.png' : '/Images/HP_GobletOfFire.png';
+      imgElement1.src = isMobile ? './Images/Mobil_HP_PhilosopherStoneBanner.jpg' : './Images/HP_PhilosopherStoneBanner.jpg';
+      imgElement2.src = isMobile ? './Images/Mobile_HP_ChamberOfSecrets.jpg' : './Images/HP_ChamberOfSecrets.jpg';
+      imgElement3.src = isMobile ? './Images/Mobil_HP_GobletOfFire.png' : './Images/HP_GobletOfFire.png';
     }
 
     window.addEventListener('resize', updateCarouselImages);
